--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "performance-record",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "DOTENV_CONFIG_PATH=.env.test jest --setupFiles=dotenv/config --runInBand --detectOpenHandles --forceExit",
     "start": "nodemon server.js"
   },
   "repository": {
