--- a/package.json
+++ b/package.json
@@ -33,7 +33,12 @@
     "eslint": "^8.23.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.1.2",
     "nodemon": "^2.0.20",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "supertest": "^6.3.0"
+  },
+  "directories": {
+    "test": "tests"
   }
 }
